Fixed too large map error with max-width CSS rule, changed verion numbering scheme to YYYY.MM.DD.V
git-svn-id: https://plugins.svn.wordpress.org/routes-and-schedules-accordion/trunk@658417 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -68,6 +68,7 @@
 .routes-and-schedules-accordion-map-img {
     padding: 4px !important;
     line-height: 20px !important;
+    max-width: 100% !important;
     border: 1px solid #ddd !important;
     -webkit-border-radius: 4px !important;
     -moz-border-radius: 4px !important;
